# KonamikU

./: .gitignore  .gitmodules  README.md  changelog-260630.json  changelog-260651.json  changelog-260710.json  changelog-260722.json  changelog-260730.json  changelog-260743.json  changelog-bonjour.json  changelog-hello.json  changelog-initial.json  changelog-test0.json  changelog-test1.json  changelog-yep-idk.json  gradle.properties  update.json  version.properties
.github/workflows/: trigger-sync.yml  update-changelog.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/org/cf0x/konamiku/: KonamikuApp.kt  MainActivity.kt
app/src/main/java/org/cf0x/konamiku/data/: AppDataStore.kt  CardData.kt  UpdateModels.kt
app/src/main/java/org/cf0x/konamiku/navigation/: Navigation.kt
app/src/main/java/org/cf0x/konamiku/nfc/: DummyPaymentService.kt  EmuCard.kt  FelicaCard.kt  NfcUtils.kt
app/src/main/java/org/cf0x/konamiku/notification/: LiveUpdateManager.kt  (+2 more)
app/src/main/jni/: CMakeLists.txt
app/src/main/res/drawable/: ic_launcher_monochrome.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: hce_f_service.xml  locales_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+29 files in other folders)
